--- a/package.json
+++ b/package.json
@@ -9,13 +9,51 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "0.2.2",
+    "@expo/vector-icons": "13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "6.5.0",
+    "@react-navigation/native": "6.1.0",
+    "@react-navigation/stack": "6.3.8",
+    "@reduxjs/toolkit": "1.6.1",
+    "axios": "1.2.1",
     "expo": "~48.0.11",
-    "expo-status-bar": "~1.4.4",
+    "expo-av": "13.2.1",
+    "expo-barcode-scanner": "12.3.2",
+    "expo-constants": "14.2.1",
+    "expo-document-picker": "11.2.2",
+    "expo-file-system": "15.2.2",
+    "expo-image-picker": "14.1.1",
+    "expo-local-authentication": "13.3.0",
+    "expo-media-library": "15.2.3",
+    "expo-secure-store": "12.1.1",
+    "expo-sharing": "11.2.2",
+    "expo-splash-screen": "0.18.1",
+    "expo-status-bar": "1.4.4",
+    "moment": "2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-dialog": "9.3.0",
+    "react-native-gesture-handler": "2.9.0",
+    "react-native-image-viewing": "0.2.2",
+    "react-native-mime-types": "2.3.0",
+    "react-native-modal": "13.0.1",
+    "react-native-paper": "4.9.2",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "3.20.0",
+    "react-native-simple-dialogs": "1.5.0",
+    "react-native-svg": "13.4.0",
+    "react-native-webview": "11.26.0",
+    "react-redux": "7.2.5",
+    "rn-pdf-reader-js": "4.1.1",
+    "socket.io-client": "4.5.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.71.6",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
